add tailwind config

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "tailwindcss-plugins": "^0.3.0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
