--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "sass": "^1.25.0",
+    "sass-loader": "^8.0.2",
     "tailwindcss-plugins": "^0.3.0",
     "vue-cli-plugin-storybook": "^1.2.0",
     "vue-template-compiler": "^2.6.10"
