--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "storybook-addon-vue-info": "^1.4.1",
     "tailwindcss-plugins": "^0.3.0",
     "vue-cli-plugin-storybook": "^1.2.0",
+    "vue-svg-loader": "^0.15.0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
