Rename package from ui-library to @chec/ui-library to namespace it

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ui-library",
+  "name": "@chec/ui-library",
   "version": "0.1.0",
   "private": true,
   "main": "dist/ui-library.common.js",
