--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
+    "lint:fix": "vue-cli-service lint --fix",
     "build-lib": "vue-cli-service build --target lib --name ui-library src/index.js",
     "storybook:build": "vue-cli-service storybook:build -c config/storybook",
     "storybook:serve": "vue-cli-service storybook:serve -p 6006 -c config/storybook"
   },
   "dependencies": {
+    "@vue/eslint-config-airbnb": "^5.0.2",
     "core-js": "^3.4.4",
     "tailwindcss": "^1.1.4",
     "vue": "^2.6.10"
@@ -24,7 +26,7 @@
     "@storybook/addon-notes": ">=5.3.0",
     "@storybook/vue": ">=5.3.0",
     "@vue/cli-plugin-babel": "^4.1.0",
-    "@vue/cli-plugin-eslint": "^4.1.0",
+    "@vue/cli-plugin-eslint": "^4.2.2",
     "@vue/cli-service": "^4.1.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
