--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "@vue/eslint-config-airbnb": "^5.0.2",
+    "autoprefixer": "^9.7.4",
     "core-js": "^3.4.4",
     "tailwindcss": "^1.1.4",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "tailwindcss-plugins": "^0.3.0"
   },
   "devDependencies": {
     "@storybook/addon-actions": ">=5.3.0",
@@ -32,7 +34,6 @@
     "sass": "^1.25.0",
     "sass-loader": "^8.0.2",
     "storybook-addon-vue-info": "^1.4.1",
-    "tailwindcss-plugins": "^0.3.0",
     "vue-cli-plugin-storybook": "^1.2.0",
     "vue-svg-loader": "^0.15.0",
     "vue-template-compiler": "^2.6.10"
