--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@vue/eslint-config-airbnb": "^5.0.2",
     "autoprefixer": "^9.7.4",
     "core-js": "^3.4.4",
+    "lodash.uniqueid": "^4.0.1",
     "tailwindcss": "^1.1.4",
-    "vue": "^2.6.10",
-    "tailwindcss-plugins": "^0.3.0"
+    "tailwindcss-plugins": "^0.3.0",
+    "vue": "^2.6.10"
   },
   "devDependencies": {
     "@storybook/addon-actions": ">=5.3.0",
