--- a/.editorconfig
+++ b/.editorconfig
@@ -11,5 +11,5 @@ trim_trailing_whitespace = true
 [*.md]
 trim_trailing_whitespace = false
 
-[*.{yml,yaml,js,vue,mdx}]
+[*.{yml,yaml,js,vue,mdx,scss,css}]
 indent_size = 2
