--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lodash.uniqueid": "^4.0.1",
     "tailwindcss": "^1.1.4",
     "tailwindcss-plugins": "^0.3.0",
+    "v-tooltip": "akryum/v-tooltip",
     "vue": "^2.6.10"
   },
   "devDependencies": {
