--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,10 @@ jobs:
         name: Build
         with:
           cmd: build-lib
+      - name: Check for changes
+        run: git diff --exit-code --quiet
       - name: Commit
-        if: success()
+        if: failed()
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
