--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Check for changes
         run: git diff --exit-code --quiet
       - name: Commit
-        if: failed()
+        if: failure()
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
