--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,21 +10,36 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+
+      - uses: actions/cache@v1
+        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
       - uses: actions/checkout@v2
       - uses: borales/actions-yarn@v2.0.0
         name: Install
         with:
           cmd: install 
+
       - uses: borales/actions-yarn@v2.0.0
         name: Build
         with:
           cmd: build-lib
+
       - name: Commit
         id: commit
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git diff --exit-code --quiet || (git commit -am "Build library bundles" && echo "::set-output name=status::built")
+
       - name: Push
         if: contains(steps.commit.outputs.status, 'built')
         uses: ad-m/github-push-action@master
