--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "^9.7.4",
     "core-js": "^3.4.4",
     "lodash.uniqueid": "^4.0.1",
+    "postcss-assets": "^5.0.0",
     "tailwindcss": "^1.2.0",
     "tailwindcss-plugins": "^0.3.0",
     "v-tooltip": "akryum/v-tooltip",
