--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "tailwindcss": "^1.2.0",
     "tailwindcss-plugins": "^0.3.0",
     "v-tooltip": "akryum/v-tooltip",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vuejs-paginate": "github:john-raymon/vuejs-paginate"
   },
   "devDependencies": {
     "@storybook/addon-actions": ">=5.3.0",
