--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "autoprefixer": "^9.7.4",
     "core-js": "^3.4.4",
     "lodash.uniqueid": "^4.0.1",
+    "popper.js": "^1.16.1",
     "postcss-assets": "^5.0.0",
     "tailwindcss": "^1.2.0",
     "tailwindcss-plugins": "^0.3.0",
     "v-tooltip": "akryum/v-tooltip",
     "vue": "^2.6.10",
-    "vuejs-paginate": "github:john-raymon/vuejs-paginate"
+    "vue-popperjs": "github:john-raymon/vue-popper"
   },
   "devDependencies": {
     "@storybook/addon-actions": ">=5.3.0",
