--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@vue/eslint-config-airbnb": "^5.0.2",
     "autoprefixer": "^9.7.4",
     "core-js": "^3.4.4",
+    "flatpickr": "^4.6.3",
     "lodash.uniqueid": "^4.0.1",
     "postcss-assets": "^5.0.0",
     "tailwindcss": "^1.2.0",
     "tailwindcss-plugins": "^0.3.0",
     "v-tooltip": "akryum/v-tooltip",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-flatpickr-component": "^8.1.5"
   },
   "devDependencies": {
     "@storybook/addon-actions": ">=5.3.0",
