Use @chec/eslint-config and fix linting issues

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vue/eslint-config-airbnb": "^5.0.2",
     "autoprefixer": "^9.7.4",
     "core-js": "^3.4.4",
+    "eslint-plugin-vue": "^7.0.0-alpha.6",
     "flatpickr": "^4.6.3",
     "lodash.uniqueid": "^4.0.1",
     "postcss-assets": "^5.0.0",
@@ -36,7 +37,6 @@
     "@vue/cli-service": "^4.1.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
     "sass": "^1.25.0",
     "sass-loader": "^8.0.2",
     "storybook-addon-vue-info": "^1.4.1",
