--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "private": true,
   "main": "dist/ui-library.common.js",
   "scripts": {
-    "lint": "vue-cli-service lint",
-    "lint:fix": "vue-cli-service lint --fix",
+    "lint": "yarn lint-js && yarn lint-scss",
+    "lint:fix": "yarn lint-js:fix && yarn lint-scss:fix",
+    "lint-js": "vue-cli-service lint",
+    "lint-scss": "stylelint src/**/*.scss src/**/*.vue",
+    "lint-js:fix": "vue-cli-service lint --fix",
+    "lint-scss:fix": "stylelint src/**/*.scss src/**/*.vue --fix",
     "build-lib": "vue-cli-service build --target lib --name ui-library src/index.js",
     "storybook:build": "vue-cli-service storybook:build -c config/storybook",
     "storybook:serve": "vue-cli-service storybook:serve -p 6006 -c config/storybook"
@@ -41,6 +45,10 @@
     "sass-loader": "^8.0.2",
     "storybook-addon-vue-info": "^1.4.1",
     "storybook-vue-router": "^1.0.7",
+    "stylelint": "^13.6.0",
+    "stylelint-config-sass-guidelines": "^7.0.0",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-webpack-plugin": "^2.0.0",
     "tailwindcss-plugins": "^0.3.0",
     "vue-cli-plugin-storybook": "^1.2.0",
     "vue-router": "^3.1.5",
