Add eslint-config package to dependencies

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "storybook:serve": "vue-cli-service storybook:serve -p 6006 -c config/storybook"
   },
   "dependencies": {
+    "@chec/eslint-config": "^0.0.0",
     "@popperjs/core": "^2.1.1",
     "@vue/eslint-config-airbnb": "^5.0.2",
     "autoprefixer": "^9.7.4",
