--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,14 +1,3 @@
 {
-  "extends": "stylelint-config-sass-guidelines",
-  "rules": {
-    "max-nesting-depth": null,
-    "selector-class-pattern": [
-      "^\\w[\\w\\d]([a-z]|-(?!-))+(__([a-z]|-(?!-))+)?(--([a-z]|-(?!-))+)?$",
-      {}
-    ],
-    "scss/at-extend-no-missing-placeholder": null,
-    "indentation": [2, {
-      "baseIndentLevel": 0
-    }]
-  }
+  "extends": "@chec/stylelint-config"
 }
