got rid of whitelist, disable purging of storybook, add strict purge for building of lib bundle only

--- a/.github/workflows/build-bundle.yml
+++ b/.github/workflows/build-bundle.yml
@@ -27,12 +27,14 @@ jobs:
       - uses: borales/actions-yarn@v2.0.0
         name: Install
         with:
-          cmd: install 
+          cmd: install
 
       - uses: borales/actions-yarn@v2.0.0
         name: Build
         with:
           cmd: build-lib
+        env:
+          PURGE_ENABLED: true
 
       - name: Commit
         id: commit
