Add peer dependency for vue-i18n
Projects using UI lib must have this added and configured, and must
import and use the UI library's `Lang` object, otherwise you will get
translation keys in components rather than English text.

--- a/package.json
+++ b/package.json
@@ -58,6 +58,9 @@
     "vue-svg-loader": "^0.16.0",
     "vue-template-compiler": "^2.6.10"
   },
+  "peerDependencies": {
+    "vue-i18n": "8.x"
+  },
   "browserslist": [
     "> 1%",
     "last 2 versions"
