--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@chec/ui-library",
   "version": "0.0.1",
+  "license": "BSD-3-Clause",
   "main": "dist/ui-library.common.js",
   "homepage": "https://github.com/chec/ui-library",
   "author": "Chec Platform Inc",
