--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
     "@vue/eslint-config-airbnb": "^5.0.2",
     "autoprefixer": "^9.7.4",
     "core-js": "^3.4.4",
+    "dropzone": "^5.7.2",
     "eslint-plugin-vue": "^7.0.0-alpha.6",
     "flatpickr": "^4.6.3",
     "lodash.uniqueid": "^4.0.1",
     "portal-vue": "^2.1.7",
     "postcss-assets": "^5.0.0",
-    "tailwindcss": "^1.4.6",
+    "tailwindcss": "^1.6.0",
     "tailwindcss-plugins": "^0.3.0",
     "v-tooltip": "akryum/v-tooltip",
     "vue": "^2.6.10",
