--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "core-js": "^3.4.4",
     "dropzone": "^5.7.2",
     "eslint-plugin-vue": "^7.0.0-alpha.6",
+    "filesize": "^6.1.0",
     "flatpickr": "^4.6.3",
     "lodash.uniqueid": "^4.0.1",
     "portal-vue": "^2.1.7",
