--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "lint-js:fix": "vue-cli-service lint --fix",
     "lint-scss:fix": "stylelint \"src/**/*.scss\" \"src/**/*.vue\" --fix",
     "build-lib": "vue-cli-service build --target lib --name ui-library src/index.js",
-    "storybook:build": "vue-cli-service storybook:build -c config/storybook",
-    "storybook:serve": "vue-cli-service storybook:serve -p 6006 -c config/storybook"
+    "build": "vue-cli-service storybook:build -c config/storybook",
+    "storybook:build": "yarn build",
+    "serve": "vue-cli-service storybook:serve -p 6006 -c config/storybook",
+    "storybook:serve": "yarn serve"
   },
   "dependencies": {
     "@chec/eslint-config": "^0.0.0",
@@ -38,7 +40,8 @@
     "tailwindcss-plugins": "^0.3.0",
     "v-tooltip": "akryum/v-tooltip",
     "vue": "^2.6.10",
-    "vue-flatpickr-component": "^8.1.5"
+    "vue-flatpickr-component": "^8.1.5",
+    "vuedraggable": "^2.24.1"
   },
   "devDependencies": {
     "@storybook/addon-actions": ">=5.3.0",
