--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "lodash.uniqueid": "^4.0.1",
     "portal-vue": "^2.1.7",
     "postcss-assets": "^5.0.0",
+    "prismjs": "^1.21.0",
     "tailwindcss": "^1.6.0",
     "tailwindcss-plugins": "^0.3.0",
     "v-tooltip": "akryum/v-tooltip",
     "vue": "^2.6.10",
     "vue-flatpickr-component": "^8.1.5",
+    "vue-prism-component": "^1.2.0",
     "vuedraggable": "^2.24.1"
   },
   "devDependencies": {
