Ignore CodeBlock in stylelint rules, most of it is copied from Prism

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,3 +1,7 @@
 {
-  "extends": "@chec/stylelint-config"
+  "extends": "@chec/stylelint-config",
+  "ignoreFiles": [
+    "node_modules",
+    "src/components/CodeBlock.vue"
+  ]
 }
