Add WYSIWYG component
- adding icons, installing packages, building menu bar and input, styling
- fixing issue that caused tiptap to not work due to an open issue wiht the repo
- clean up, adding translations
- Fix placeholders, value binding, and ID generation
- fixing issue with label resize not working, clean up.
- Stopping menu from overlapping text
- Fix disabled state of WYSIWYG component
- adding simple blockwuote styling
- adding size options
- Add placeholder to WYSIWYG
- Fix box-shadow appearing on wrong element
- Fix styles for the dark variant
- fixing scroll underlay
- Add click handler to give focus to the editor

--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "prismjs": "^1.21.0",
     "tailwindcss": "^1.8.12",
     "tailwindcss-plugins": "^0.3.0",
+    "tiptap": "^1.30.0",
+    "tiptap-extensions": "^1.33.1",
     "v-tooltip": "akryum/v-tooltip",
     "vue": "^2.6.10",
     "vue-flatpickr-component": "^8.1.5",
@@ -74,6 +76,9 @@
   },
   "peerDependencies": {
     "vue-i18n": "8.x"
+  },
+  "resolutions": {
+    "prosemirror-model": "1.11.2"
   },
   "browserslist": [
     "> 1%",
