--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "portal-vue": "^2.1.7",
     "postcss-assets": "^5.0.0",
     "prismjs": "^1.21.0",
+    "resize-observer-polyfill": "^1.5.1",
     "tailwindcss": "^1.8.12",
     "tailwindcss-plugins": "^0.3.0",
     "tiptap": "^1.30.0",
