--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-vue": "^7.0.0-alpha.6",
     "filesize": "^6.1.0",
     "flatpickr": "^4.6.3",
+    "lodash.get": "^4.4.2",
     "lodash.uniqueid": "^4.0.1",
     "portal-vue": "^2.1.7",
     "postcss-assets": "^5.0.0",
