Adjust stylelint rule to ensure @apply can be used

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -3,5 +3,8 @@
   "ignoreFiles": [
     "node_modules",
     "src/components/CodeBlock.vue"
-  ]
+  ],
+  "rules": {
+    "scss/at-rule-no-unknown": null
+  }
 }
