Integrating localazy with UI LIibrary

--- a/package.json
+++ b/package.json
@@ -16,15 +16,17 @@
     "lint-scss": "stylelint \"src/**/*.scss\" \"src/**/*.vue\"",
     "lint-js:fix": "vue-cli-service lint --fix",
     "lint-scss:fix": "stylelint \"src/**/*.scss\" \"src/**/*.vue\" --fix",
-    "build-lib": "vue-cli-service build --target lib --name ui-library src/index.js",
-    "build": "vue-cli-service storybook:build -c config/storybook",
+    "build-lib": "yarn translations:download && vue-cli-service build --target lib --name ui-library src/index.js",
+    "build": "yarn translations:download && vue-cli-service storybook:build -c config/storybook",
     "storybook:build": "yarn build",
     "serve": "vue-cli-service storybook:serve -p 6006 -c config/storybook",
+    "translations:download": "node build/translations.js",
     "storybook:serve": "yarn serve"
   },
   "dependencies": {
     "@chec/eslint-config": "^0.0.0",
     "@chec/stylelint-config": "^0.0.0",
+    "@localazy/cli": "^1.2.3",
     "@popperjs/core": "^2.1.1",
     "@vue/eslint-config-airbnb": "^5.0.2",
     "autoprefixer": "^9.7.4",
