Add a button and modal that can be used to select existing images

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -5,6 +5,7 @@
     "src/components/CodeBlock.vue"
   ],
   "rules": {
-    "scss/at-rule-no-unknown": null
+    "scss/at-rule-no-unknown": null,
+    "order/properties-alphabetical-order": null
   }
 }
