--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "postcss-assets": "^5.0.0",
     "prismjs": "^1.21.0",
     "resize-observer-polyfill": "^1.5.1",
-    "tailwindcss": "^1.8.12",
+    "tailwindcss": "1.9.6",
     "tailwindcss-plugins": "^0.3.0",
     "tiptap": "^1.30.0",
     "tiptap-extensions": "^1.33.1",
