Refactor for rollup, convert build process to rollup and bundle an ESM build

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.99",
   "license": "BSD-3-Clause",
   "main": "dist/ui-library.common.js",
+  "module": "esm/index.js",
+  "source": "src/index.js",
   "homepage": "https://github.com/chec/ui-library",
   "author": "Chec Platform Inc",
   "repository": {
@@ -16,7 +18,7 @@
     "lint-scss": "stylelint \"src/**/*.scss\" \"src/**/*.vue\"",
     "lint-js:fix": "vue-cli-service lint --fix",
     "lint-scss:fix": "stylelint \"src/**/*.scss\" \"src/**/*.vue\" --fix",
-    "build-lib": "yarn translations:download && vue-cli-service build --target lib --name ui-library src/index.js",
+    "build-lib": "yarn translations:download && rollup -c rollup.config.js",
     "build": "yarn translations:download && vue-cli-service storybook:build -c config/storybook",
     "storybook:build": "yarn build",
     "serve": "vue-cli-service storybook:serve -p 6006 -c config/storybook",
@@ -24,16 +26,11 @@
     "storybook:serve": "yarn serve"
   },
   "dependencies": {
-    "@chec/eslint-config": "^0.0.0",
-    "@chec/stylelint-config": "^0.0.0",
-    "@localazy/cli": "^1.2.3",
     "@popperjs/core": "^2.1.1",
-    "@vue/eslint-config-airbnb": "^5.0.2",
     "autoprefixer": "^9.7.4",
     "chart.js": "^2.9.4",
     "core-js": "^3.4.4",
     "dropzone": "^5.7.2",
-    "eslint-plugin-vue": "^7.0.0-alpha.6",
     "filesize": "^6.1.0",
     "flatpickr": "^4.6.3",
     "lodash.get": "^4.4.2",
@@ -47,13 +44,20 @@
     "tiptap": "^1.30.0",
     "tiptap-extensions": "^1.33.1",
     "v-tooltip": "akryum/v-tooltip",
-    "vue": "^2.6.10",
     "vue-chartjs": "^3.5.1",
     "vue-flatpickr-component": "^8.1.5",
     "vue-prism-editor": "^1.2.2",
     "vuedraggable": "^2.24.1"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/runtime": "^7.15.4",
+    "@chec/eslint-config": "^0.0.0",
+    "@chec/stylelint-config": "^0.0.0",
+    "@localazy/cli": "^1.2.3",
+    "@rollup/plugin-alias": "^3.1.5",
+    "@rollup/plugin-commonjs": "^20.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.5",
     "@storybook/addon-actions": ">=5.3.0",
     "@storybook/addon-docs": ">=5.3.0",
     "@storybook/addon-knobs": ">=5.3.0",
@@ -63,9 +67,19 @@
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-eslint": "^4.2.2",
     "@vue/cli-service": "^4.1.0",
+    "@vue/eslint-config-airbnb": "^5.0.2",
     "babel-eslint": "^10.0.3",
+    "esbuild": "^0.12.28",
     "eslint": "^5.16.0",
-    "sass": "^1.25.0",
+    "eslint-plugin-vue": "^7.0.0-alpha.6",
+    "rollup": "^2.57.0",
+    "rollup-plugin-analyzer": "^4.0.0",
+    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-esbuild": "^4.5.0",
+    "rollup-plugin-filesize": "^9.1.1",
+    "rollup-plugin-vue": "^5",
+    "rollup-plugin-vue-inline-svg": "^1.1.2",
+    "sass": "^1.40.1",
     "sass-loader": "^8.0.2",
     "storybook-addon-vue-info": "^1.4.1",
     "storybook-vue-router": "^1.0.7",
@@ -74,13 +88,15 @@
     "stylelint-config-standard": "^20.0.0",
     "stylelint-webpack-plugin": "^2.0.0",
     "tailwindcss-plugins": "^0.3.0",
+    "vue": "^2.6",
     "vue-cli-plugin-storybook": "^1.2.0",
     "vue-i18n": "^8.18.2",
     "vue-router": "^3.1.5",
     "vue-svg-loader": "^0.16.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6"
   },
   "peerDependencies": {
+    "vue": "^2.6",
     "vue-i18n": "8.x"
   },
   "resolutions": {
