--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chec/ui-library",
-  "version": "0.1.0-alpha1",
+  "version": "0.1.0-alpha2",
   "license": "BSD-3-Clause",
   "main": "dist/ui-library.common.js",
   "module": "esm/index.js",
@@ -75,6 +75,7 @@
     "rollup": "^2.57.0",
     "rollup-plugin-analyzer": "^4.0.0",
     "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-esbuild": "^4.5.0",
     "rollup-plugin-filesize": "^9.1.1",
     "rollup-plugin-vue": "^5",
