--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chec/ui-library",
-  "version": "0.1.0-alpha3",
+  "version": "0.1.0-alpha4",
   "license": "BSD-3-Clause",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -41,8 +41,8 @@
     "resize-observer-polyfill": "^1.5.1",
     "tailwindcss": "1.9.6",
     "tailwindcss-plugins": "^0.3.0",
-    "tiptap": "^1.30.0",
-    "tiptap-extensions": "^1.33.1",
+    "tiptap": "1.32.2",
+    "tiptap-extensions": "1.35.2",
     "v-tooltip": "akryum/v-tooltip",
     "vue-chartjs": "^3.5.1",
     "vue-flatpickr-component": "^8.1.5",
@@ -73,11 +73,11 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^7.0.0-alpha.6",
     "rollup": "^2.57.0",
-    "rollup-plugin-analyzer": "^4.0.0",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-esbuild": "^4.5.0",
     "rollup-plugin-filesize": "^9.1.1",
+    "rollup-plugin-visualizer": "^5.5.2",
     "rollup-plugin-vue": "^5",
     "rollup-plugin-vue-inline-svg": "^1.1.2",
     "sass": "^1.40.1",
