--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chec/ui-library",
-  "version": "0.1.0-alpha3",
+  "version": "0.1.0-alpha4",
   "license": "BSD-3-Clause",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -41,8 +41,8 @@
     "resize-observer-polyfill": "^1.5.1",
     "tailwindcss": "1.9.6",
     "tailwindcss-plugins": "^0.3.0",
-    "tiptap": "^1.30.0",
-    "tiptap-extensions": "^1.33.1",
+    "tiptap": "1.32.2",
+    "tiptap-extensions": "1.35.2",
     "v-tooltip": "akryum/v-tooltip",
     "vue-chartjs": "^3.5.1",
     "vue-flatpickr-component": "^8.1.5",
@@ -50,6 +50,8 @@
     "vuedraggable": "^2.24.1"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.15.7",
+    "@babel/eslint-plugin": "^7.14.5",
     "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/runtime": "^7.15.4",
     "@chec/eslint-config": "^0.0.0",
@@ -58,12 +60,11 @@
     "@rollup/plugin-alias": "^3.1.5",
     "@rollup/plugin-commonjs": "^20.0.0",
     "@rollup/plugin-node-resolve": "^13.0.5",
-    "@storybook/addon-actions": ">=5.3.0",
-    "@storybook/addon-docs": ">=5.3.0",
-    "@storybook/addon-knobs": ">=5.3.0",
-    "@storybook/addon-links": ">=5.3.0",
-    "@storybook/addon-notes": ">=5.3.0",
-    "@storybook/vue": ">=5.3.0",
+    "@storybook/addon-actions": "^6.3.8",
+    "@storybook/addon-docs": "^6.3.8",
+    "@storybook/addon-knobs": "^6.3.1",
+    "@storybook/addon-links": "^6.3.8",
+    "@storybook/vue": "^6.3.8",
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-eslint": "^4.2.2",
     "@vue/cli-service": "^4.1.0",
@@ -73,16 +74,15 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^7.0.0-alpha.6",
     "rollup": "^2.57.0",
-    "rollup-plugin-analyzer": "^4.0.0",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-esbuild": "^4.5.0",
     "rollup-plugin-filesize": "^9.1.1",
+    "rollup-plugin-visualizer": "^5.5.2",
     "rollup-plugin-vue": "^5",
     "rollup-plugin-vue-inline-svg": "^1.1.2",
     "sass": "^1.40.1",
     "sass-loader": "^8.0.2",
-    "storybook-addon-vue-info": "^1.4.1",
     "storybook-vue-router": "^1.0.7",
     "stylelint": "^13.6.0",
     "stylelint-config-sass-guidelines": "^7.0.0",
