--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "@babel/eslint-plugin": "^7.14.5",
     "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/runtime": "^7.15.4",
-    "@chec/eslint-config": "^0.0.0",
+    "@chec/eslint-config": "^0.0.1",
     "@chec/stylelint-config": "^0.0.0",
     "@localazy/cli": "^1.2.3",
     "@rollup/plugin-alias": "^3.1.5",
@@ -72,7 +72,8 @@
     "babel-eslint": "^10.0.3",
     "esbuild": "^0.12.28",
     "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^7.0.0-alpha.6",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-vue": "^7.18",
     "rollup": "^2.57.0",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-delete": "^2.0.0",
