--- a/package.json
+++ b/package.json
@@ -74,11 +74,12 @@
     "eslint": "^5.16.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-vue": "^7.18",
+    "postcss": "^8.3.7",
     "rollup": "^2.57.0",
-    "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-esbuild": "^4.5.0",
     "rollup-plugin-filesize": "^9.1.1",
+    "rollup-plugin-scss": "^3.0.0",
     "rollup-plugin-visualizer": "^5.5.2",
     "rollup-plugin-vue": "^5",
     "rollup-plugin-vue-inline-svg": "^1.1.2",
