--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chec/ui-library",
-  "version": "0.1.0-alpha9",
+  "version": "0.1.0",
   "license": "BSD-3-Clause",
   "main": "dist/index.js",
   "module": "dist/index.js",
